near-sdk/compilation_tests/payable_view.stderr
error: Payable method must be mutable (not view)
  --> $DIR/payable_view.rs:12:5
   |
12 |     #[payable]
   |     ^
